--- a/client/src/app/pages/company/companies/companies.component.html
+++ b/client/src/app/pages/company/companies/companies.component.html
@@ -1,185 +1,183 @@
 <ng-container *ngIf="isLoadingResults">
-    <div class="loader">
-        <mat-spinner></mat-spinner>
-        <h4>Loading...</h4>
-    </div>
+  <div class="loader">
+    <mat-spinner></mat-spinner>
+    <h4>Loading...</h4>
+  </div>
 </ng-container>
 
 
 <!-- Search Bar -->
 <div class="career-main">
-    <form class="common-search-filter" [formGroup]="companiesForm" autocomplete="off">
-        <div class="filter-data">
-            <mat-icon (click)="toggleTabMenuOpen()" class="filter_icon">filter_list</mat-icon>
+  <form class="common-search-filter" [formGroup]="companiesForm" autocomplete="off">
+    <div class="filter-data">
+      <mat-icon (click)="toggleTabMenuOpen()" class="filter_icon">filter_list</mat-icon>
+    </div>
+    <div class="companies-search-header">
+      <mat-form-field appearance="standard" class="search">
+        <mat-icon matSuffix (click)="onSearchCompany($event)">search</mat-icon>
+        <input matInput placeholder="{{searchPlaceholderCopy}}" type="text" [matAutocomplete]="autocompleteSearch"
+          formControlName="searchCompanies" (keyup.enter)="onSearchCompany($event)">
+        <mat-autocomplete #autocompleteSearch="matAutocomplete">
+          <a *ngFor="let company of autocomplete_searchcompanies | slice:0:4" [routerLink]="['/company-info']"
+            [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
+            <mat-option [value]="company.company_name">
+              <img class="company-autocomplete-logo"
+                [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'">
+              <span>{{company.company_name}}</span>
+            </mat-option>
+          </a>
+          <mat-option [value]="companiesForm.value.searchCompanies" (click)="onSearchCompany($event)"
+            *ngIf="companiesForm.value.searchCompanies?.length > 0">
+            See all results for <b>{{companiesForm.value.searchCompanies}}</b>
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </div>
+  </form>
+
+  <div class="companies-main-container">
+
+    <!-- Filter Side -->
+    <form class="filter-container tablet" [formGroup]="companiesForm" [class.open]="showFilterListFlag"
+      autocomplete="off">
+      <ng-container>
+        <div class="nav-title">
+          <h3 class="section-title">Company Filters</h3>
         </div>
-        <div class="companies-search-header">
-            <mat-form-field appearance="standard" class="search">
-                <mat-icon matSuffix (click)="onSearchCompany($event)">search</mat-icon>
-                <input matInput placeholder="{{searchPlaceholderCopy}}" type="text" [matAutocomplete]="autocompleteSearch"
-                    formControlName="searchCompanies" (keyup.enter)="onSearchCompany($event)">
-                <mat-autocomplete #autocompleteSearch="matAutocomplete">
-                    <a *ngFor="let company of autocomplete_searchcompanies | slice:0:4"
-                        [routerLink]="['/company-info']"
-                        [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
-                        <mat-option [value]="company.company_name">
-                            <img class="company-autocomplete-logo" [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'">
-                            <span>{{company.company_name}}</span>
-                        </mat-option>
-                    </a>
-                    <mat-option [value]="companiesForm.value.searchCompanies" 
-                        (click)="onSearchCompany($event)"
-                        *ngIf="companiesForm.value.searchCompanies?.length > 0">
-                        See all results for <b>{{companiesForm.value.searchCompanies}}</b>
-                    </mat-option>
-                </mat-autocomplete>
-            </mat-form-field>
+
+        <div class="filter-card">
+          <mat-form-field>
+            <mat-label>Industry </mat-label>
+            <input matInput placeholder="Industry" type="text" [matAutocomplete]="autocompleteIndustry"
+              formControlName="industry">
+            <mat-autocomplete #autocompleteIndustry="matAutocomplete">
+              <mat-option *ngFor="let industry of autocomplete_industries" [value]="industry.industry_name"
+                (onSelectionChange)="onChangeIndustry(industry)">
+                <span>{{industry.industry_name}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
         </div>
+
+        <div class="filter-card">
+          <mat-form-field>
+            <mat-label>Size</mat-label>
+            <mat-select class="arrow" formControlName="size">
+              <mat-option value=''></mat-option>
+              <mat-option *ngFor="let size of companySizeTypes" value="{{size}}">{{size}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="filter-card">
+          <mat-form-field>
+            <mat-label>City</mat-label>
+            <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
+            <mat-autocomplete #autocompleteCity="matAutocomplete">
+              <mat-option *ngFor="let city of autocomplete_cities" [value]="(city.city)?.split(',')[0]"
+                (onSelectionChange)="onChangeCity(city)">
+                <span>{{city.city}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+        </div>
+
+        <div class="filter-card">
+          <div class="side-filter-btn">
+            <action-button type="raised" color="primary" title="Apply Filters" (click)="applyFilter();">
+            </action-button>
+          </div>
+          <div class="clear-filter">
+            <action-button class="clear-btn" type="text" title="Clear Filters" (click)="clearFilter()" color="primary">
+            </action-button>
+          </div>
+        </div>
+      </ng-container>
     </form>
 
-    <div class="companies-main-container">
 
-        <!-- Filter Side -->
-        <form class="filter-container tablet" [formGroup]="companiesForm" [class.open]="showFilterListFlag" autocomplete="off">
-            <ng-container>
-                <div class="nav-title">
-                    <h3 class="section-title">Company Filters</h3>
+    <!-- Results Side-->
+    <div class="companies-list-container">
+      <ng-container *ngIf="companyList && companyList.length > 0">
+        <div *ngFor="let company of companyList; let i = index;">
+          <div class="row">
+            <div class="header-container">
+              <div class="company-info">
+                <div class="image"><img
+                    [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'">
                 </div>
-
-                <div class="filter-card">
-                    <mat-form-field>
-                        <mat-label>Industry </mat-label>
-                        <input matInput placeholder="Industry" type="text" [matAutocomplete]="autocompleteIndustry"
-                        formControlName="industry">
-                        <mat-autocomplete #autocompleteIndustry="matAutocomplete">
-                        <mat-option *ngFor="let industry of autocomplete_industries" 
-                            [value]="industry.industry_name"
-                            (onSelectionChange)="onChangeIndustry(industry)">
-                            <span>{{industry.industry_name}}</span>
-                        </mat-option>
-                        </mat-autocomplete>
-                    </mat-form-field>
+                <div class="info">
+                  <a [routerLink]="['/company-info/']"
+                    [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
+                    <h2 class="name">{{company.company_name}}</h2>
+                  </a>
+                  <h3 *ngIf="company.hq_city || company.hq_state" class="title">
+                    <img src="assets/icons/ic_location.svg">
+                    {{company.hq_city_name}}, {{company.hq_state_name}}, {{company.hq_country_name}}
+                  </h3>
                 </div>
+              </div>
 
-                <div class="filter-card">
-                    <mat-form-field>
-                        <mat-label>Size</mat-label>
-                        <mat-select class="arrow" formControlName="size">
-                            <mat-option value=''></mat-option>
-                            <mat-option *ngFor="let size of companySizeTypes" value="{{size}}">{{size}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-
-                <div class="filter-card">
-                    <mat-form-field>
-                        <mat-label>City</mat-label>
-                        <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
-                        <mat-autocomplete #autocompleteCity="matAutocomplete">
-                            <mat-option *ngFor="let city of autocomplete_cities" 
-                            [value]="(city.city)?.split(',')[0]" 
-                            (onSelectionChange)="onChangeCity(city)">
-                            <span>{{city.city}}</span>
-                            </mat-option>
-                        </mat-autocomplete>
-                    </mat-form-field>
-                </div>
-
-                <div class="filter-card">
-                    <div class="side-filter-btn">
-                        <action-button type="raised" color="primary" title="Apply Filters" (click)="applyFilter();">
-                        </action-button>
-                    </div>
-                    <div class="clear-filter">
-                        <action-button class="clear-btn" type="text" title="Clear Filters" (click)="clearFilter()" color="primary"></action-button>
-                    </div>
-                </div>
-            </ng-container>
-        </form>
-      
-
-        <!-- Results Side-->
-        <div class="companies-list-container">
-            <ng-container *ngIf="companyList && companyList.length > 0">
-                <div *ngFor="let company of companyList; let i = index;">
-                    <div class="row">
-                        <div class="header-container">
-                            <div class="company-info">
-                                <div class="image"><img
-                                        [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'"></div>
-                                <div class="info">
-                                    <a [routerLink]="['/company-info/']"
-                                        [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
-                                        <h2 class="name">{{company.company_name}}</h2>
-                                    </a>
-                                    <h3 *ngIf="company.hq_city || company.hq_state" class="title">
-                                        <img src="assets/icons/ic_location.svg">
-                                        {{company.hq_city_name}}, {{company.hq_state_name}}, {{company.hq_country_name}}
-                                    </h3>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="sub-container">
-                            <div class="company-info-box" *ngIf="company.main_industry" >
-                                <div class="info">
-                                    <h5>Industry</h5>
-                                    <h4>{{company.main_industry_name}}</h4>
-                                </div>
-                            </div>
-                            <div class="company-info-box" *ngIf="company.company_size">
-                                <div class="info">
-                                    <h5>Company Size</h5>
-                                    <h4>{{parseReverseCompanySize(company.company_size)}}</h4>
-                                </div>
-                            </div>
-                            <div class="company-info-box" *ngIf="company.position_levels">
-                                <div class="info">
-                                    <h5>Total Openings</h5>
-                                    <h4>{{company.position_levels.total_count}} Positions</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="about-company">About Company</h5>
-                        <ng-container *ngIf="maxDescriptionLength; let maxDescription">
-                            <p class="about-company">
-                                {{company.company_desc | slice:0:maxDescription}}<span *ngIf="company.company_desc.length>maxDescription">...</span>
-                            </p>
-                            <div class="show-button">
-                                <action-button *ngIf="maxDescription === maxDescriptionLength && company.company_desc.length > maxDescriptionLength"
-                                    routerLink="." 
-                                    type="text" 
-                                    title="Show More" 
-                                    color="primary" 
-                                    (click)="maxDescription=company.company_desc.length"></action-button>
-                                <action-button *ngIf="maxDescription === company.company_desc.length"
-                                    routerLink="." 
-                                    type="text" 
-                                    title="Show Less" 
-                                    color="primary" 
-                                    (click)="maxDescription=maxDescriptionLength"></action-button>
-                            </div>
-                        </ng-container>
-                    </div>
-                </div>
-            </ng-container>
-
-            <div *ngIf="!companyList || (companyList && companyList.length === 0)">
-                <div class="row no-companies">
-                    {{ emptyResultsCopy }}
-                </div>
             </div>
 
-            <div class="pagination" *ngIf="companyList && companyList.length > 0">
-                <ul type="none">
-                <li class="large_pagination_button" (click)="pageClicked(currentPageNumber-1)">Prev Page</li>
-                <li *ngFor="let pageNo of paginationArr" [ngClass]="{'active': pageNo == currentPageNumber}"
-                    (click)="pageClicked(pageNo)">{{ pageNo }}
-                </li>
-                <li class="large_pagination_button" (click)="pageClicked(currentPageNumber+1)">Next Page</li>
-                </ul>
-            </div>
+
+            <mat-grid-list [cols]="breakpoint" rowHeight="60px" (window:resize)="onResize($event)" class="card">
+
+              <mat-grid-tile>
+                <div class="card-item">
+                  <span>Industry</span>
+                  <p>{{company.main_industry_name ? company.main_industry_name : 'N/A'}}
+                  </p>
+                </div>
+              </mat-grid-tile>
+              <mat-grid-tile>
+                <div class="card-item">
+                  <span>Company Size</span>
+                  <p>{{parseReverseCompanySize(company.company_size)}}</p>
+                </div>
+              </mat-grid-tile>
+              <mat-grid-tile>
+                <div class="card-item">
+                  <span>Total Openings</span>
+                  <p>{{company.position_levels.total_count}} Positions</p>
+                </div>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <h5 class="about-company">About Company</h5>
+            <ng-container *ngIf="maxDescriptionLength; let maxDescription">
+              <p class="about-company">
+                {{company.company_desc | slice:0:maxDescription}}<span
+                  *ngIf="company.company_desc.length>maxDescription">...</span>
+              </p>
+              <div class="show-button">
+                <action-button
+                  *ngIf="maxDescription === maxDescriptionLength && company.company_desc.length > maxDescriptionLength"
+                  routerLink="." type="text" title="Show More" color="primary"
+                  (click)="maxDescription=company.company_desc.length"></action-button>
+                <action-button *ngIf="maxDescription === company.company_desc.length" routerLink="." type="text"
+                  title="Show Less" color="primary" (click)="maxDescription=maxDescriptionLength"></action-button>
+              </div>
+            </ng-container>
+          </div>
         </div>
+      </ng-container>
+
+      <div *ngIf="!companyList || (companyList && companyList.length === 0)">
+        <div class="row no-companies">
+          {{ emptyResultsCopy }}
+        </div>
+      </div>
+
+      <div class="pagination" *ngIf="companyList && companyList.length > 0">
+        <ul type="none">
+          <li class="large_pagination_button" (click)="pageClicked(currentPageNumber-1)">Prev Page</li>
+          <li *ngFor="let pageNo of paginationArr" [ngClass]="{'active': pageNo == currentPageNumber}"
+            (click)="pageClicked(pageNo)">{{ pageNo }}
+          </li>
+          <li class="large_pagination_button" (click)="pageClicked(currentPageNumber+1)">Next Page</li>
+        </ul>
+      </div>
     </div>
+  </div>
 </div>
