--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -343,9 +343,9 @@
                 <simple-tag *ngIf="(i < limit)" type="gray" title="{{interest.interest}}">
                 </simple-tag>
               </ng-container>
-              <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit"
+              <img *ngIf="limit > displayItemsLimit"  class="interest-img" (click)="limit = limit - displayItemsLimit"
                 src="assets/icons/ic_see_less.svg" alt="See Less">
-              <img *ngIf="limit < interestsList?.length" (click)="limit = limit + displayItemsLimit"
+              <img *ngIf="limit < interestsList?.length" class="interest-img" (click)="limit = limit + displayItemsLimit"
                 src="assets/icons/ic_see_more.svg" alt="See More">
             </div>
           </div>
