--- a/client/src/app/pages/career-fairs/career-fair-search/career-fair-search.component.html
+++ b/client/src/app/pages/career-fairs/career-fair-search/career-fair-search.component.html
@@ -13,7 +13,7 @@
     <div class="postion-search-header">
       <mat-form-field appearance="standard" class="search">
         <mat-icon matSuffix (click)="onSearchPosition($event)">search</mat-icon>
-        <input matInput placeholder="Search career fair by university name" type="text" formControlName="searchCareerfair"
+        <input matInput placeholder="Search career fairs by university or name" type="text" formControlName="searchCareerfair"
           (keyup.enter)="onSearchPosition($event)">
       </mat-form-field>
     </div>
